# causal-halting

./: .gitignore  README.md  pyproject.toml
.codex-plugin/: plugin.json
causal_halting/: __init__.py  cli.py
commands/: causal-halting.md
docs/: _config.yml  adapters.md  case-studies.md  chc-0.md  chc-1-2.md  chc-1.md  chc-2.md  cli.md  conservatism.md  evaluation.md  execution-identity.md  formal-roadmap.md  index.md  interfaces.md  misuse.md  otel-instrumentation.md  publication.md  viewer.html  viewer.md
evals/: baseline-responses.jsonl  compare-template.md  expected-behavior.md  guarded-responses.jsonl  prompts.jsonl
examples/: chc1-recursive-feedback.chc  chc2-higher-order-safe.chc  diagonal.chc  future-run.trace.jsonl  generic-workflow.json  otel-self-prediction.json  prediction-future-risk.prediction-ir.json  qe-valid-acyclic.chc  safe-supervisor.graph  self-prediction.analysis.json  self-prediction.design-ir.json  self-prediction.trace.jsonl  temporal-airflow-indirect-feedback.json  temporal-self-feedback.trace.jsonl
hooks/: hooks.json
schemas/: effect-summary.schema.json  theorem-coverage.schema.json
scripts/: chc_check.py  chc_design_analyze.py  chc_design_schema.py  chc_eval_suite.py  chc_identity_check.py  chc_prediction_check.py  chc_repair.py  chc_report.py  chc_session_guard.py  chc_temporal_airflow_adapter.py  chc_temporal_check.py  chc_theory_coverage.py  chc_trace_check.py  chc_verify_repair.py  chc_workflow_adapter.py  evaluate_responses.py  sync_skill_package.py
tests/: test_chc_check.py  test_chc_design_trace_repair.py  test_chc_v3.py  (+5 more)
(+354 files in other folders)
